--- a/week01/day03/style.css
+++ b/week01/day03/style.css
@@ -6,13 +6,12 @@ body {
     padding: 0;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 20px;
-    background-color: #EAECEF;
+    background-color: #FAFBFC;
 }
 nav {
-    background-color: #7A829C;
+    background-color: #C6CBD1;
     height: 35px;
-    border-bottom: 2px solid #0366D6;
-    border-top: 2px solid #0366D6;
+    border-bottom: 2px solid #959DA5;
 }
 nav a {
     text-decoration: none;
@@ -28,7 +27,7 @@ nav a:hover {
     justify-content: space-around;
 }
 .main .left {
-    border: 2px solid #0366D6;
+    border: 2px solid #959DA5;
     height: 335px;
     width: 250px;
     margin-top: 15px;
@@ -55,7 +54,7 @@ nav a:hover {
     text-align: left;
 }
 table { 
-    border: 2px solid #0366D6;
+    border: 2px solid #959DA5;
     width: 1200px;
 }
 .main .right table tr td {
@@ -66,24 +65,24 @@ table {
 }
 
 .main .right table th {
-    background-color: #7A829C;
+    background-color: #C6CBD1;
     height: 35px;
     padding-left: 5px;
     color: #000000;
 }
 .main .right .border-top-bottom {
-    border-top: 1px solid #0366D6;
-    border-bottom: 1px solid #0366D6;
+    border-top: 0.3px solid #C6CBD1;
+    border-bottom: 0.3px solid #C6CBD1;
 }
 .main .right .border-bottom {
-    border-bottom: 1px solid #0366D6;
+    border-bottom: 0.3px solid #C6CBD1;
 }
 .main .right .border-left-right {
-    border-left: 1px solid #0366D6;
-    border-right: 1px solid #0366D6;
+    border-left: 0.3px solid #C6CBD1;
+    border-right: 0.3px solid #C6CBD1;
 }
 .ad {
-    border: 2px solid #0366D6;
+    border: 2px solid #959DA5;
     width: 1350px;
     text-align: center;
     font-size: 35px;
